update README instructions